sdk_tests/tests/state-macro-fail/state_enum_duplicate_discriminants.stderr
error[E0081]: discriminant value `1` already exists
 --> tests/state-macro-fail/state_enum_duplicate_discriminants.rs:9:15
  |
8 |     Bad = 1,
  |           - first use of `1`
9 |     Neutral = 1,
  |               ^ enum already has `1`
